# LLM-Project-Template

./: README.md  pyproject.toml
configs/: config.yaml
custom_tools/: collect_res.py
earlyexit/: utils.py
prompts/: prompt_utils.py
scripts/: main.py
src/: api.py  async_utils.py  config_store.py  data_utils.py  eval_utils.py  import_utils.py  language_models.py  log.py  model_configs.py  runner.py  tokenizer_utils.py  utils.py
tests/: test_datadict.py  test_runner.py  test_utils.py
